trying to build the bcool and bflow xtext grammars