@@ -12,4 +12,88 @@
   <version>1.0.0-SNAPSHOT</version>
   <description>This project contains the  Xtext project of BCOoL</description>
   <url>http://bcool.inria.fr</url>
+  <build>
+		<plugins>
+			
+			<!--  <plugin>
+				<groupId>org.fornax.toolsupport</groupId>
+				<artifactId>fornax-oaw-m2-plugin</artifactId>
+				<executions>
+			
+				  <execution>
+				    <id>xtext</id>
+				    <phase>generate-sources</phase>
+				    <goals>
+				      <goal>run-workflow</goal>
+				    </goals>
+				    <configuration>
+				      <workflowEngine>mwe2</workflowEngine>
+				      <workflowDescriptor>org.gemoc.bcool.model.xtext.BCOoL</workflowDescriptor>
+				      <timestampFileName>xtext-generator.timestamp</timestampFileName>
+				      <jvmSettings>
+						<fork>true</fork>
+						<jvmArgs>
+						  <jvmArg>-Xms100m</jvmArg>
+						  <jvmArg>-Xmx700m</jvmArg>
+						  <jvmArg>-XX:MaxPermSize=128m</jvmArg>
+						  <jvmArg>-Dlog4j.configuration=file:${basedir}/log4j.properties</jvmArg>
+						</jvmArgs>
+				      </jvmSettings>
+				    </configuration>
+				  </execution>
+				</executions>
+	      	</plugin>
+	      	-->
+  		 	<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<executions>
+					<execution>
+				    	<id>xtext</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					  <argLine>-Xmx1024m</argLine>
+					  <argLine>-Xms1024m</argLine>
+					  <argLine>-XX:PermSize=512m</argLine>
+					  <argLine>-XX:MaxPermSize=1024m</argLine>
+					<includeProjectDependencies>false</includeProjectDependencies>
+					<includePluginDependencies>true</includePluginDependencies>
+					<mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
+					<arguments>
+						<argument>file://${project.basedir}/src/org/gemoc/bcool/model/xtext/GenerateBCOoL.mwe2</argument>
+						<argument>
+							-p
+						</argument>
+						<argument>
+							runtimeProject=/${project.basedir}
+						</argument>
+
+					</arguments>
+				</configuration>
+                <dependencies>
+					<dependency>
+						<groupId>org.gemoc.bcool.framework</groupId>
+						<artifactId>org.gemoc.bcool.model</artifactId>
+						<version>0.1.0-SNAPSHOT</version>
+					</dependency>
+					<dependency>
+						<groupId>org.eclipse.xtext</groupId>
+						<artifactId>org.eclipse.xtext.xtext</artifactId>
+						<version>${xtext.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.eclipse.xtext</groupId>
+						<artifactId>org.eclipse.xtext.xbase</artifactId>
+						<version>${xtext.version}</version>
+					</dependency>
+                </dependencies>
+			</plugin> 
+		</plugins>
+	</build>
 </project>
